--- a/natours/styles/styles.css
+++ b/natours/styles/styles.css
@@ -438,9 +438,11 @@ body {
     font-size: 1.4rem; }
 
 .form__group:not(:last-child) {
+  -webkit-margin-after: 0.8rem;
   margin-block-end: 0.8rem; }
 
 .form__group:nth-child(4) {
+  -webkit-margin-after: 4rem;
   margin-block-end: 4rem; }
 
 .form__input {
@@ -451,29 +453,37 @@ body {
   border-radius: 2px;
   background-color: rgba(247, 247, 247, 0.64);
   border: none;
+  -webkit-border-after: 3px solid transparent;
   border-block-end: 3px solid transparent;
   width: 90%;
   color: inherit;
+  -webkit-transition: all 0.3s;
   transition: all 0.3s; }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    -webkit-border-after: 3px solid #54c47a;
     border-block-end: 3px solid #54c47a; }
   .form__input:focus:invalid {
+    -webkit-border-after: 3px solid #ff772e;
     border-block-end: 3px solid #ff772e; }
   .form__input::-webkit-input-placeholder {
     color: #a3a3a3; }
   .form__input:placeholder-shown + .form__label {
     opacity: 0;
     visibility: hidden;
+    -webkit-transform: translateY(-4rem);
     transform: translateY(-4rem); }
 
 .form__label {
   font-size: 1.2rem;
   font-weight: 700;
+  -webkit-margin-start: 2.4rem;
   margin-inline-start: 2.4rem;
+  -webkit-margin-before: 0.7rem;
   margin-block-start: 0.7rem;
   display: block;
+  -webkit-transition: all 0.3s;
   transition: all 0.3s; }
 
 .form__radio-group {
@@ -487,6 +497,7 @@ body {
   font-size: 1.6rem;
   cursor: pointer;
   position: relative;
+  -webkit-padding-start: 4rem;
   padding-inline-start: 4rem; }
 
 .form__radio-button {
@@ -507,9 +518,11 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     background-color: #54c47a;
     opacity: 0;
+    -webkit-transition: opacity 0.3s;
     transition: opacity 0.3s; }
 
 .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
