--- a/natours/styles/styles.css
+++ b/natours/styles/styles.css
@@ -698,6 +698,125 @@ body {
     backface-visibility: hidden;
     text-align: center; }
 
+.navigation__checkbox:checked ~ .navigation__background {
+  -webkit-transform: scale(88);
+  transform: scale(88); }
+
+.navigation__checkbox:checked ~ .navigation__menu {
+  width: 100%;
+  opacity: 1; }
+
+.navigation__button {
+  position: fixed;
+  top: 5.2rem;
+  right: 5.2rem;
+  z-index: 48;
+  height: 7.2rem;
+  width: 7.2rem;
+  background-color: #f7f7f7;
+  border-radius: 50%;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1); }
+  .navigation__button:hover {
+    cursor: pointer; }
+
+.navigation__background {
+  position: fixed;
+  top: 5.6rem;
+  right: 5.6rem;
+  z-index: 32;
+  height: 6.4rem;
+  width: 6.4rem;
+  border-radius: 50%;
+  background-image: radial-gradient(#80d671, #27b485);
+  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+
+.navigation__menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 40;
+  height: 100vh;
+  width: 0;
+  opacity: 0;
+  -webkit-transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  .navigation__menu__list {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 100%;
+    list-style: none;
+    text-align: center; }
+  .navigation__menu__item:not(:last-of-type) {
+    -webkit-margin-after: 1rem;
+    margin-block-end: 1rem; }
+  .navigation__menu__link:link, .navigation__menu__link:visited {
+    display: inline-block;
+    font-size: 2.4rem;
+    font-weight: 100;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1rem 1.6rem;
+    color: #f7f7f7;
+    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #f7f7f7 50%);
+    background-size: 240%;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s; }
+  .navigation__menu__link:hover, .navigation__menu__link:active {
+    background-position: 100%;
+    color: #54c47a;
+    -webkit-transform: translateX(1rem);
+    transform: translateX(1rem); }
+  .navigation__menu__link span {
+    display: inline-block;
+    -webkit-margin-end: 1.2rem;
+    margin-inline-end: 1.2rem;
+    font-size: 1.8rem; }
+
+.navigation__icon {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    display: inline-block;
+    width: 3.2rem;
+    height: 2px;
+    background-color: #a3a3a3;
+    border-radius: 4px; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s; }
+  .navigation__icon::before {
+    top: -9px; }
+  .navigation__icon::after {
+    top: 9px; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg);
+  top: 0; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+  top: 0; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 24rem 0 28rem 0;
