--- a/natours/styles/styles.css
+++ b/natours/styles/styles.css
@@ -528,6 +528,86 @@ body {
 .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
   opacity: 1; }
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 64;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s; }
+  .modal:target {
+    opacity: 1;
+    visibility: visible; }
+  .modal:target .modal__content {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1; }
+  .modal__close:link, .modal__close:visited {
+    color: #333333;
+    position: absolute;
+    top: 2.4rem;
+    right: 2.4rem;
+    font-size: 3.2rem;
+    line-height: 1;
+    text-decoration: none;
+    display: inline-block;
+    -webkit-transition: color 0.2s;
+    transition: color 0.2s; }
+  .modal__close:hover {
+    color: #54c47a; }
+  .modal__content {
+    width: 88%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(0.25);
+    transform: translate(-50%, -50%) scale(0.25);
+    opacity: 0;
+    background-color: rgba(247, 247, 247, 0.9);
+    border-radius: 4px;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    display: table;
+    overflow: hidden;
+    -webkit-transition: all 0.4s 0.2s;
+    transition: all 0.4s 0.2s; }
+    .modal__content__left {
+      width: 33.3333%;
+      display: table-cell; }
+    .modal__content__right {
+      width: 66.6667%;
+      display: table-cell;
+      vertical-align: middle;
+      padding: 3.2rem 5.6rem; }
+    .modal__content__picture {
+      display: block;
+      width: 100%; }
+  .modal__text {
+    font-size: 1.5rem;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 4rem;
+    -moz-column-gap: 4rem;
+    column-gap: 4rem;
+    -webkit-column-rule: 1px solid rgba(0, 0, 0, 0.05);
+    -moz-column-rule: 1px solid rgba(0, 0, 0, 0.05);
+    column-rule: 1px solid rgba(0, 0, 0, 0.05);
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto; }
+  .modal__disclaimer__terms:link, .modal__disclaimer__terms:visited {
+    text-decoration: none;
+    color: #54c47a;
+    -webkit-transition: color 0.2s;
+    transition: color 0.2s; }
+  .modal__disclaimer__terms:hover {
+    color: #27b485; }
+
 .story {
   width: 75%;
   margin: 0 auto;
