Fix navigation's checkout display issue

--- a/natours/sass/layout/_navigation.scss
+++ b/natours/sass/layout/_navigation.scss
@@ -1,5 +1,7 @@
 .navigation {
   &__checkbox {
+    display: none;
+
     &:checked ~ .navigation__background {
       -webkit-transform: scale(88);
       transform: scale(88);
