--- a/natours/sass/base/_typography.scss
+++ b/natours/sass/base/_typography.scss
@@ -14,6 +14,11 @@
     animation-duration: 0.6s;
     -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out;
+
+    @include respond(phone) {
+      font-size: 5rem;
+      letter-spacing: 2rem;
+    }
   }
 
   &--sub {
@@ -31,6 +36,11 @@
     animation-duration: 0.6s;
     -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out;
+
+    @include respond(phone) {
+      font-size: 2rem;
+      letter-spacing: 0.6rem;
+    }
   }
 
   &--main::-moz-selection,
@@ -56,6 +66,16 @@
   color: transparent;
   letter-spacing: 2px;
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+    letter-spacing: 1px;
+  }
+
+  @include respond(phone) {
+    font-size: 2.3rem;
+    letter-spacing: 0.5px;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
