--- a/natours/styles/styles.css
+++ b/natours/styles/styles.css
@@ -1,3 +1,13 @@
+/*
+  0 - 600px: Phone
+  600px - 900px: Tablet portrait
+  900px - 1200px: Tabllet landscape
+  1200px 1800px: Standard
+  1800px+: Big desktop
+
+  Breakpoint argument choices:
+  phone, tab-port, tab-land, big-desktop
+*/
 @-webkit-keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -61,6 +71,15 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 *,
 *::after,
@@ -106,6 +125,10 @@ body {
     animation-duration: 0.6s;
     -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        font-size: 5rem;
+        letter-spacing: 2rem; } }
   .heading-primary--sub {
     display: block;
     -webkit-margin-after: 4rem;
@@ -121,6 +144,10 @@ body {
     animation-duration: 0.6s;
     -webkit-animation-timing-function: ease-out;
     animation-timing-function: ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        font-size: 2rem;
+        letter-spacing: 0.6rem; } }
   .heading-primary--main::-moz-selection, .heading-primary--sub::-moz-selection {
     background-color: #f7f7f7;
     color: #54c47a; }
@@ -138,6 +165,14 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all 0.2s; }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3rem;
+      letter-spacing: 1px; } }
+  @media (max-width: 37.5em) {
+    .heading-secondary {
+      font-size: 2.3rem;
+      letter-spacing: 0.5px; } }
   .heading-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 3rem rgba(0, 0, 0, 0.2); }
