--- a/natours/sass/components/_card.scss
+++ b/natours/sass/components/_card.scss
@@ -261,4 +261,64 @@
     font-size: 6.4rem;
     font-weight: 100;
   }
+
+  @include respond(tab-port) {
+    height: auto;
+    padding: 0;
+    box-shadow: 0 1.5rem 4rem hsla(0, 0%, 0%, 0.16);
+
+    &__side {
+      position: relative;
+      height: auto;
+      box-shadow: none;
+
+      &--back {
+        transform: rotateY(0);
+        padding: 4.8rem 2rem 2.6rem 2rem;
+        -webkit-clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
+        margin-block-start: -3rem;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+      }
+    }
+
+    &:hover &__side--front {
+      -webkit-transform: rotateY(0);
+      transform: rotateY(0);
+    }
+
+    &__details {
+      padding: 2.4rem 3.2rem 5.6rem 3.2rem;
+
+      & ul {
+        width: 64%;
+      }
+    }
+
+    &__picture {
+      height: 240px;
+    }
+
+    // Back side of the card
+    &__cta {
+      position: relative;
+      width: 100%;
+      top: 0;
+      left: 0;
+      -webkit-transform: translate(0%);
+      transform: translate(0);
+    }
+
+    &__price-box {
+      -webkit-margin-after: 2.4rem;
+      margin-block-end: 2.4rem;
+    }
+
+    &__price-value {
+      font-size: 4rem;
+    }
+  }
 }
