--- a/natours/sass/components/_composition.scss
+++ b/natours/sass/components/_composition.scss
@@ -12,16 +12,33 @@
     &--p1 {
       left: 0;
       top: -2rem;
+
+      @include respond(tab-port) {
+        top: 0;
+        transform: scale(1.2);
+      }
     }
 
     &--p2 {
       right: 0;
       top: 4rem;
+
+      @include respond(tab-port) {
+        top: 0;
+        transform: scale(1.3);
+        z-index: 100;
+      }
     }
 
     &--p3 {
       left: 20%;
       top: 12.8rem;
+
+      @include respond(tab-port) {
+        top: 0;
+        left: 0;
+        transform: scale(1.1);
+      }
     }
 
     &:hover {
@@ -31,6 +48,13 @@
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem hsla(0, 0%, 0%, 0.5);
       z-index: 20;
+    }
+
+    @include respond(tab-port) {
+      position: relative;
+      float: left;
+      width: 33.3333%;
+      box-shadow: 0 1.5rem 3rem hsla(0, 0%, 0%, 0.2);
     }
   }
 
