--- a/natours/sass/components/_form.scss
+++ b/natours/sass/components/_form.scss
@@ -11,6 +11,13 @@
     }
   }
 
+  & input[type="text"],
+  & input[type="email"] {
+    @include respond(tab-port) {
+      width: 100%;
+    }
+  }
+
   &__input {
     font-family: inherit;
     font-size: 1.5rem;
@@ -65,6 +72,11 @@
   &__radio-group {
     width: 48%;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      margin-block-end: 2rem;
+    }
   }
 
   &__radio-input {
@@ -110,5 +122,4 @@
   &__radio-input:checked ~ &__radio-label &__radio-button::after {
     opacity: 1;
   }
-  // FIXME: Radio buttons selection
 }
