--- a/natours/sass/layout/_navigation.scss
+++ b/natours/sass/layout/_navigation.scss
@@ -27,6 +27,16 @@
     &:hover {
       cursor: pointer;
     }
+
+    @include respond(tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
+
+    @include respond(phone) {
+      top: 3.2rem;
+      right: 3.2rem;
+    }
   }
 
   &__background {
@@ -43,6 +53,16 @@
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1),
       -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+
+    @include respond(tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
+
+    @include respond(phone) {
+      top: 3.2rem;
+      right: 3.2rem;
+    }
   }
 
   &__menu {
