--- a/natours/sass/pages/_home.scss
+++ b/natours/sass/pages/_home.scss
@@ -3,6 +3,10 @@
   padding: 24rem 0 28rem 0;
   -webkit-margin-before: -16vh;
   margin-block-start: -16vh;
+
+  @include respond(tab-port) {
+    padding: 18rem 0;
+  }
 }
 
 .section-features {
@@ -28,6 +32,10 @@
     -webkit-transform: skewY(4.8deg);
     transform: skewY(4.8deg);
   }
+
+  @include respond(tab-port) {
+    padding: 12rem 0;
+  }
 }
 
 .section-tours {
@@ -35,16 +43,46 @@
   padding: 23rem 0 16rem 0;
   -webkit-margin-before: -8rem;
   margin-block-start: -8rem;
+
+  & .row {
+    @include respond(tab-port) {
+      max-width: 60%;
+    }
+  }
+
+  @include respond(tab-port) {
+    padding: 16rem 0 8rem 0;
+  }
 }
 
 .section-stories {
   position: relative;
   padding: 12rem 0;
+
+  & .row {
+    @include respond(phone) {
+      max-width: 72%;
+    }
+  }
+
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
 }
 
 .section-book {
   padding: 16rem 0;
   background-image: linear-gradient(to right bottom, $green-light, $green-dark);
+
+  & .row {
+    @include respond(tab-land) {
+      max-width: 80%;
+    }
+  }
+
+  @include respond(tab-land) {
+    padding: 10rem 0;
+  }
 }
 
 .book {
@@ -62,5 +100,18 @@
   &__form {
     width: 50%;
     padding: 5.6rem;
+
+    @include respond(tab-land) {
+      width: 64%;
+    }
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(to right, $white-90 0%, $white-90 100%),
+      url("../assets/nat-10.jpg");
   }
 }
