--- a/natours/styles/styles.css
+++ b/natours/styles/styles.css
@@ -194,15 +194,24 @@ body {
 
 .u-margin-bottom-big {
   margin-block-end: 8rem; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-block-end: 4.8rem; } }
 
 .u-margin-bottom-medium {
   margin-block-end: 4rem; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-block-end: 3.2rem; } }
 
 .u-margin-bottom-small {
   margin-block-end: 1.6rem; }
 
 .u-margin-top-big {
   margin-block-start: 8rem; }
+  @media (max-width: 37.5em) {
+    .u-margin-top-big {
+      margin-block-start: 4rem; } }
 
 .bg-video {
   position: absolute;
@@ -417,6 +426,46 @@ body {
   .card__price-value {
     font-size: 6.4rem;
     font-weight: 100; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto;
+      padding: 0;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.16); }
+      .card__side {
+        position: relative;
+        height: auto;
+        box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0);
+          padding: 4.8rem 2rem 2.6rem 2rem;
+          -webkit-clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
+          margin-block-start: -3rem;
+          border-top-left-radius: 0;
+          border-top-right-radius: 0;
+          border-bottom-left-radius: 4px;
+          border-bottom-right-radius: 4px; }
+      .card:hover .card__side--front {
+        -webkit-transform: rotateY(0);
+        transform: rotateY(0); }
+      .card__details {
+        padding: 2.4rem 3.2rem 5.6rem 3.2rem; }
+        .card__details ul {
+          width: 64%; }
+      .card__picture {
+        height: 240px; }
+      .card__cta {
+        position: relative;
+        width: 100%;
+        top: 0;
+        left: 0;
+        -webkit-transform: translate(0%);
+        transform: translate(0); }
+      .card__price-box {
+        -webkit-margin-after: 2.4rem;
+        margin-block-end: 2.4rem; }
+      .card__price-value {
+        font-size: 4rem; } }
 
 .composition {
   position: relative; }
@@ -430,12 +479,26 @@ body {
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          top: 0;
+          transform: scale(1.2); } }
     .composition__photo--p2 {
       right: 0;
       top: 4rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: 0;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo--p3 {
       left: 20%;
       top: 12.8rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          top: 0;
+          left: 0;
+          transform: scale(1.1); } }
     .composition__photo:hover {
       outline: 1.2rem solid #54c47a;
       outline-offset: 1.6rem;
@@ -443,6 +506,12 @@ body {
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        position: relative;
+        float: left;
+        width: 33.3333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
   .composition:hover .composition__photo:not(:hover) {
     -webkit-transform: scale(0.96);
     transform: scale(0.96); }
@@ -469,8 +538,14 @@ body {
     display: block;
     width: 6.4rem;
     height: 6.4rem; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        margin: 0 auto 2rem auto; } }
   .feature-box__desc {
     font-size: 1.4rem; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      padding: 2rem; } }
 
 .form__group:not(:last-child) {
   -webkit-margin-after: 0.8rem;
@@ -479,6 +554,11 @@ body {
 .form__group:nth-child(4) {
   -webkit-margin-after: 4rem;
   margin-block-end: 4rem; }
+
+@media (max-width: 56.25em) {
+  .form input[type="text"],
+  .form input[type="email"] {
+    width: 100%; } }
 
 .form__input {
   font-family: inherit;
@@ -524,6 +604,10 @@ body {
 .form__radio-group {
   width: 48%;
   display: inline-block; }
+  @media (max-width: 56.25em) {
+    .form__radio-group {
+      width: 100%;
+      margin-block-end: 2rem; } }
 
 .form__radio-input {
   display: none; }
@@ -668,6 +752,11 @@ body {
     backface-visibility: hidden;
     position: relative;
     overflow: hidden; }
+    @media (max-width: 37.5em) {
+      .story__shape {
+        -webkit-transform: skewX(0);
+        transform: skewX(0);
+        margin-inline-end: 3rem; } }
   .story__image {
     height: 100%;
     -webkit-transform: translateX(-4rem) scale(1.4);
@@ -681,6 +770,10 @@ body {
     transform: skewX(12deg);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden; }
+    @media (max-width: 37.5em) {
+      .story__text {
+        -webkit-transform: skewX(0);
+        transform: skewX(0); } }
   .story__caption {
     position: absolute;
     top: 50%;
@@ -706,6 +799,16 @@ body {
     transform: translateX(-4rem) scale(1);
     -webkit-filter: blur(3px) brightness(88%);
     filter: blur(3px) brightness(88%); }
+  @media (max-width: 56.25em) {
+    .story {
+      width: 100%;
+      -webkit-padding-start: 8rem;
+      padding-inline-start: 8rem; } }
+  @media (max-width: 37.5em) {
+    .story {
+      padding: 3.2rem 3.2rem 2.4rem 3.2rem;
+      -webkit-transform: skewX(0);
+      transform: skewX(0); } }
 
 .footer {
   background-color: #333333;
@@ -714,11 +817,21 @@ body {
   color: #f7f7f7; }
   .footer .row {
     padding: 0 4.8rem; }
+    @media (max-width: 56.25em) {
+      .footer .row {
+        max-width: 64%; } }
+    @media (max-width: 37.5em) {
+      .footer .row {
+        max-width: 80%; } }
   .footer__logo-box {
     -moz-text-align-last: center;
     text-align-last: center;
     -webkit-margin-after: 8rem;
     margin-block-end: 8rem; }
+    @media (max-width: 56.25em) {
+      .footer__logo-box {
+        -webkit-margin-after: 4.8rem;
+        margin-block-end: 4.8rem; } }
   .footer__logo {
     width: 16rem;
     height: auto; }
@@ -728,6 +841,12 @@ body {
     -webkit-padding-before: 2rem;
     padding-block-start: 2rem;
     display: inline-block; }
+    @media (max-width: 56.25em) {
+      .footer__navigation {
+        width: 100%;
+        text-align: center;
+        -webkit-border-before: none;
+        border-block-start: none; } }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -762,12 +881,31 @@ body {
       transition: color 0.3s; }
     .footer__copyright a:hover {
       color: #27b485; }
+    @media (max-width: 56.25em) {
+      .footer__copyright {
+        -webkit-border-before: none;
+        border-block-start: none;
+        -webkit-padding-before: 0;
+        padding-block-start: 0;
+        width: 100%;
+        float: none;
+        text-align: center; } }
+    @media (max-width: 37.5em) {
+      .footer__copyright {
+        width: 80%;
+        margin: 0 auto; } }
+  @media (max-width: 56.25em) {
+    .footer {
+      padding: 6rem 0; } }
 
 .row {
   max-width: 114rem;
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-block-end: 8rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-block-end: 6rem; } }
   .row::after {
     content: "";
     display: table;
@@ -776,6 +914,13 @@ body {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-inline-end: 6rem; }
+      @media (max-width: 56.25em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-inline-end: 0;
+          margin-block-end: 6rem; } }
+    @media (max-width: 56.25em) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
@@ -786,6 +931,9 @@ body {
     width: calc((100% - (6rem) * 3) / 4); }
   .row .col-3-of-4 {
     width: calc( 100% - 6rem - calc((100% - (6rem) * 3) / 4)); }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 64%; } }
 
 .header {
   position: relative;
@@ -812,6 +960,10 @@ body {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     text-align: center; }
+  @media (max-width: 56.25em) {
+    .header {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 86vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 86vh, 0 100%); } }
 
 .navigation__checkbox {
   display: none; }
@@ -834,6 +986,14 @@ body {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1); }
   .navigation__button:hover {
     cursor: pointer; }
+  @media (max-width: 56.25em) {
+    .navigation__button {
+      top: 4rem;
+      right: 4rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__button {
+      top: 3.2rem;
+      right: 3.2rem; } }
 
 .navigation__background {
   position: fixed;
@@ -848,6 +1008,14 @@ body {
   transition: -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  @media (max-width: 56.25em) {
+    .navigation__background {
+      top: 4rem;
+      right: 4rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__background {
+      top: 3.2rem;
+      right: 3.2rem; } }
 
 .navigation__menu {
   position: fixed;
@@ -938,6 +1106,9 @@ body {
   padding: 24rem 0 28rem 0;
   -webkit-margin-before: -16vh;
   margin-block-start: -16vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 18rem 0; } }
 
 .section-features {
   padding: 24rem 0;
@@ -952,20 +1123,41 @@ body {
   .section-features > * {
     -webkit-transform: skewY(4.8deg);
     transform: skewY(4.8deg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 12rem 0; } }
 
 .section-tours {
   background-color: #f7f7f7;
   padding: 23rem 0 16rem 0;
   -webkit-margin-before: -8rem;
   margin-block-start: -8rem; }
+  @media (max-width: 56.25em) {
+    .section-tours .row {
+      max-width: 60%; } }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 16rem 0 8rem 0; } }
 
 .section-stories {
   position: relative;
   padding: 12rem 0; }
+  @media (max-width: 37.5em) {
+    .section-stories .row {
+      max-width: 72%; } }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 8rem 0; } }
 
 .section-book {
   padding: 16rem 0;
   background-image: linear-gradient(to right bottom, #80d671, #27b485); }
+  @media (max-width: 75em) {
+    .section-book .row {
+      max-width: 80%; } }
+  @media (max-width: 75em) {
+    .section-book {
+      padding: 10rem 0; } }
 
 .book {
   background-image: linear-gradient(104deg, rgba(247, 247, 247, 0.9) 0%, rgba(247, 247, 247, 0.9) 56%, transparent 56%), url("../assets/nat-10.jpg");
@@ -975,3 +1167,12 @@ body {
   .book__form {
     width: 50%;
     padding: 5.6rem; }
+    @media (max-width: 75em) {
+      .book__form {
+        width: 64%; } }
+    @media (max-width: 56.25em) {
+      .book__form {
+        width: 100%; } }
+  @media (max-width: 56.25em) {
+    .book {
+      background-image: linear-gradient(to right, rgba(247, 247, 247, 0.9) 0%, rgba(247, 247, 247, 0.9) 100%), url("../assets/nat-10.jpg"); } }
