--- a/natours/sass/components/_modal.scss
+++ b/natours/sass/components/_modal.scss
@@ -11,6 +11,12 @@
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 
+  @supports (-webkit-backdrop-filter: blur(8px)) or (backdrop-filter: blur(8px)) {
+    background-color: hsla(0, 0%, 0%, 0.2);
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+  }
+
   &:target {
     opacity: 1;
     visibility: visible;
