--- a/natours/styles/styles.css
+++ b/natours/styles/styles.css
@@ -659,6 +659,11 @@ body {
   visibility: hidden;
   -webkit-transition: all 0.3s;
   transition: all 0.3s; }
+  @supports (-webkit-backdrop-filter: blur(8px)) or (backdrop-filter: blur(8px)) {
+    .modal {
+      background-color: rgba(0, 0, 0, 0.2);
+      -webkit-backdrop-filter: blur(8px);
+      backdrop-filter: blur(8px); } }
   .modal:target {
     opacity: 1;
     visibility: visible; }
