--- a/trillo/src/scss/base/_base.scss
+++ b/trillo/src/scss/base/_base.scss
@@ -11,6 +11,10 @@
   --gray-dark-1: hsl(0, 0%, 20%); // #333
   --gray-dark-2: hsl(0, 0%, 47%); // #777
   --gray-dark-3: hsl(0, 0%, 60%); // #999
+
+  --white: #fff;
+
+  --shadow-dark: 0 2rem 6rem hsla(0, 0%, 0%, 0.3);
 }
 
 html {
@@ -33,6 +37,7 @@ body {
   font-family: "Rubik", sans-serif;
   font-weight: 400;
   line-height: 1.6;
+  font-size: 1.6rem;
   color: var(--gray-dark-1);
   background-image: linear-gradient(
     to right bottom,
