--- a/trillo/src/scss/layout/_layout.scss
+++ b/trillo/src/scss/layout/_layout.scss
@@ -101,7 +101,114 @@
   }
 }
 
-.hotel-view {
+.movie {
   background-color: var(--white);
   flex: 1;
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 2.4rem 3.2rem;
+  }
+}
+
+.movie-info {
+  &__title {
+    display: flex;
+    align-items: baseline;
+    line-height: 1;
+    margin-block-end: 0.8rem;
+
+    &--title {
+      margin-inline-end: 1rem;
+    }
+
+    &--year {
+      font-size: 2.6rem;
+
+      & a:link,
+      & a:visited {
+        color: inherit;
+
+        &:hover {
+          color: var(--fucsia);
+        }
+      }
+    }
+  }
+
+  &__original-title {
+    color: var(--gray-dark-2);
+    margin-block-end: 0.8rem;
+    font-size: 1.5rem;
+    padding-inline-start: 3px;
+  }
+
+  &__misc-details {
+    list-style: none;
+    font-size: 1.3rem;
+    line-height: 1.1;
+    padding-inline-start: 3px;
+    color: var(--gray-dark-2);
+  }
+
+  &__detail {
+    display: inline-block;
+
+    &:not(:last-of-type) {
+      padding-right: 1.2rem;
+      margin-inline-end: 1.2rem;
+      border-right: 1px solid var(--gray-dark-3);
+    }
+
+    & a:link,
+    & a:visited {
+      color: inherit;
+
+      &:hover {
+        color: var(--fucsia);
+      }
+    }
+  }
+}
+
+.movie__header__rating {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__top {
+    @include flex-abs-center;
+    margin-block-end: 0.8rem;
+  }
+
+  &__icon {
+    width: 2.4rem;
+    height: 2.4rem;
+    fill: var(--fucsia);
+    margin-inline-end: 1rem;
+  }
+
+  &__score {
+    display: flex;
+    align-items: baseline;
+    line-height: 1;
+
+    &--own {
+      font-size: 3.2rem;
+      font-weight: 300;
+    }
+
+    &--top {
+      font-size: 1.3rem;
+      color: var(--gray-dark-3);
+    }
+  }
+
+  &__votes {
+    font-size: 1.3rem;
+    border-top: 1px solid var(--gray-light-3);
+    padding-top: 0.8rem;
+  }
 }
