--- a/trillo/src/scss/base/_base.scss
+++ b/trillo/src/scss/base/_base.scss
@@ -84,3 +84,11 @@ a {
   font-size: 3.2rem;
   font-weight: 300;
 }
+
+.heading-3 {
+  font-size: 2.4rem;
+  text-align: center;
+  width: fit-content;
+  margin: 0 auto;
+  font-weight: 300;
+}
