--- a/trillo/src/scss/layout/_layout.scss
+++ b/trillo/src/scss/layout/_layout.scss
@@ -276,3 +276,12 @@
     margin-inline-start: 2.4rem;
   }
 }
+
+.watch {
+  padding: 4.8rem 3.2rem;
+  background: var(--gray-light-1);
+
+  &__title {
+    margin-block-end: 3.2rem;
+  }
+}
