--- a/trillo/src/scss/layout/_layout.scss
+++ b/trillo/src/scss/layout/_layout.scss
@@ -219,7 +219,7 @@
 }
 
 .movie-meta {
-  padding: 3.2rem;
+  padding: 4.8rem 3.2rem;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -253,7 +253,7 @@
 }
 
 .tech-specs {
-  padding: 3.2rem;
+  padding: 4.8rem 3.2rem 5.6rem 3.2rem;
   background: var(--gray-light-2);
 
   &__title {
@@ -262,7 +262,7 @@
 }
 
 .box-office {
-  padding: 3.2rem;
+  padding: 4.8rem 3.2rem 5.6rem 3.2rem;
 
   &__title {
     margin-block-end: 1.6rem;
