--- a/trillo/src/scss/layout/_layout.scss
+++ b/trillo/src/scss/layout/_layout.scss
@@ -1,6 +1,6 @@
 .container {
   max-width: 120rem;
-  margin: 8rem auto;
+  margin: 0 auto;
   background-color: var(--gray-light-1);
   box-shadow: var(--shadow-dark);
 }
@@ -18,10 +18,18 @@
     display: inline-block;
     height: 3.2rem;
   }
+
+  @media screen and (max-width: $bp-medium) {
+    height: 9.6rem;
+  }
 }
 
 .content {
   display: flex;
+
+  @media screen and (max-width: $bp-medium) {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -79,7 +87,24 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         z-index: 10;
+
+        @media screen and (max-width: $bp-tablet) {
+          font-size: 1.3rem;
+        }
       }
+
+      @media screen and (max-width: $bp-medium) {
+        flex: 0 0 25%;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+      }
+    }
+
+    @media screen and (max-width: $bp-medium) {
+      flex: 0 0 100%;
+      flex-direction: row;
+      height: 5.6rem;
     }
   }
 
@@ -89,6 +114,11 @@
     fill: var(--gray-light-3);
     margin-inline-end: 1rem;
     z-index: 10;
+
+    @media screen and (max-width: $bp-tablet) {
+      height: 1.4rem;
+      width: 1.48rem;
+    }
   }
 
   &__legal {
@@ -98,6 +128,18 @@
     text-align: center;
     width: 80%;
     align-self: center;
+
+    @media screen and (max-width: $bp-medium) {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: $bp-medium) {
+    flex-direction: row;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    min-height: 5.6rem;
   }
 }
 
@@ -134,6 +176,10 @@
         &:hover {
           color: var(--fucsia);
         }
+      }
+
+      @media screen and (max-width: $bp-tablet) {
+        font-size: 2rem;
       }
     }
   }
@@ -228,10 +274,19 @@
     width: 92%;
     margin-block-end: 1.6rem;
   }
+
+  @media screen and (max-width: $bp-tablet) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .movie-credits {
   flex: 0 0 76%;
+
+  @media screen and (max-width: $bp-tablet) {
+    margin-block-end: 3.2rem;
+  }
 }
 
 .movie-credits-list {
