--- a/trillo/src/scss/base/_base.scss
+++ b/trillo/src/scss/base/_base.scss
@@ -78,11 +78,19 @@ a {
 .heading-1 {
   font-size: 4.8rem;
   font-weight: 300;
+
+  @media screen and (max-width: $bp-tablet) {
+    font-size: 4rem;
+  }
 }
 
 .heading-2 {
   font-size: 3.2rem;
   font-weight: 300;
+
+  @media screen and (max-width: $bp-tablet) {
+    font-size: 2.8rem;
+  }
 }
 
 .heading-3 {
@@ -91,4 +99,8 @@ a {
   width: fit-content;
   margin: 0 auto;
   font-weight: 300;
+
+  @media screen and (max-width: $bp-tablet) {
+    font-size: 2rem;
+  }
 }
