Add mobile responsiveness

--- a/trillo/src/scss/abstracts/variables.scss
+++ b/trillo/src/scss/abstracts/variables.scss
@@ -1,4 +1,10 @@
 // Breakpoints
 $bp-largest: 75em; // 1200px
 $bp-medium: 60em; // 960px
-$bp-tablet: 48em; //720px
+$bp-tablet: 48em; //768px
+$bp-tablet-xs: 45em; // 720px
+$bp-phone-xl: 40em; // 640px
+$bp-phone-x: 35em; //560px
+$bp-phone: 30em; //480px
+$bp-phone-s: 25em; // 480px
+$bp-phone-xs: 22.5em; // 360px
