--- a/trillo/src/scss/components/_components.scss
+++ b/trillo/src/scss/components/_components.scss
@@ -7,6 +7,10 @@
   height: auto;
   margin-inline-start: 15%;
 
+  @media screen and (max-width: $bp-phone-xl) {
+    display: none;
+  }
+
   &__input {
     height: 3.2rem;
     width: 25.6rem;
@@ -15,8 +19,21 @@
     font-family: "Rubik", sans-serif;
     color: var(--gray-dark-1);
 
+    @media screen and (max-width: $bp-tablet) {
+      width: 19.6rem;
+      font-size: 1.4rem;
+    }
+
+    @media screen and (max-width: $bp-tablet-xs) {
+      height: 2.8rem;
+    }
+
     &::placeholder {
       font-family: inherit;
+
+      @media screen and (max-width: $bp-tablet-xs) {
+        font-size: 1.2rem;
+      }
     }
   }
 
@@ -31,6 +48,11 @@
     width: 2rem;
     height: 2rem;
     fill: var(--gray-dark-2);
+
+    @media screen and (max-width: $bp-tablet-xs) {
+      width: 1.6rem;
+      height: 1.6rem;
+    }
   }
 }
 
@@ -54,6 +76,12 @@
     height: 4rem;
     padding: 0.8rem;
     fill: var(--gray-dark-1);
+
+    @media screen and (max-width: $bp-tablet-xs) {
+      padding: 0.6rem;
+      width: 3.2rem;
+      height: 3.2rem;
+    }
   }
 
   &__stats {
@@ -68,6 +96,14 @@
     color: var(--white);
     z-index: 8;
     border-radius: 100%;
+
+    @media screen and (max-width: $bp-tablet-xs) {
+      font-size: 0.8rem;
+      width: 1.4rem;
+      height: 1.4rem;
+      top: 0.1rem;
+      right: 0.2rem;
+    }
   }
 
   &__profile {
@@ -78,11 +114,31 @@
       height: 4rem;
       border-radius: 50%;
       margin-inline-end: 0.8rem;
+
+      @media screen and (max-width: $bp-tablet-xs) {
+        height: 3.2rem;
+      }
+
+      @media screen and (max-width: $bp-phone-s) {
+        margin-inline-end: 0;
+      }
     }
 
     & span {
       font-size: 1.4rem;
       color: var(--gray-dark-2);
+
+      @media screen and (max-width: $bp-tablet-xs) {
+        font-size: 1.3rem;
+      }
+
+      @media screen and (max-width: $bp-phone) {
+        display: none;
+      }
+    }
+
+    @media screen and (max-width: $bp-tablet-xs) {
+      padding-inline-start: 0.8rem;
     }
   }
 }
@@ -94,6 +150,10 @@
     width: calc(100% / 3);
     height: 20rem;
     overflow: hidden;
+
+    @media screen and (max-width: $bp-phone-x) {
+      height: 14rem;
+    }
   }
 
   &__image {
@@ -116,6 +176,10 @@
     display: flex;
     width: 100%;
   }
+
+  @media screen and (max-width: $bp-phone-xs) {
+    flex-direction: column;
+  }
 }
 
 .movie-critic {
@@ -129,6 +193,15 @@
       margin-block-end: 0;
       margin-inline-end: 4rem;
     }
+
+    @media screen and (max-width: $bp-phone-xl) {
+      margin-inline-end: 3.2rem;
+    }
+
+    @media screen and (max-width: $bp-phone-xs) {
+      margin-inline-end: 0;
+      margin-block-end: 2.4rem;
+    }
   }
 }
 
@@ -141,6 +214,19 @@
   height: 4.8rem;
   @include flex-abs-center;
   margin-inline-end: 1rem;
+
+  @media screen and (max-width: $bp-tablet-xs) {
+    font-size: 3.2rem;
+    padding: 0;
+    background: var(--white);
+    color: var(--fucsia);
+    margin-inline-end: 0.4rem;
+    letter-spacing: -1.2px;
+  }
+
+  @media screen and (max-width: $bp-phone-x) {
+    display: none;
+  }
 }
 
 .metascore-info {
@@ -149,6 +235,14 @@
     display: block;
     line-height: 1;
     margin-block-end: 0.8rem;
+
+    @media screen and (max-width: $bp-tablet-xs) {
+      margin-block-end: 0.4rem;
+    }
+
+    @media screen and (max-width: $bp-phone-xl) {
+      font-size: 1.4rem;
+    }
   }
 
   &__desc {
@@ -175,6 +269,19 @@
     background: var(--fucsia);
     fill: var(--white);
     margin-inline-end: 1rem;
+
+    @media screen and (max-width: $bp-tablet-xs) {
+      width: 4rem;
+      height: 4rem;
+      padding: 0;
+      background: var(--white);
+      fill: var(--fucsia);
+      margin-inline-end: 0.8rem;
+    }
+
+    @media screen and (max-width: $bp-phone-x) {
+      display: none;
+    }
   }
 }
 
@@ -184,6 +291,10 @@
     display: block;
     line-height: 1;
     margin-block-end: 0.8rem;
+
+    @media screen and (max-width: $bp-phone-xl) {
+      font-size: 1.4rem;
+    }
   }
 
   &__desc {
@@ -201,6 +312,19 @@
     background: var(--fucsia);
     fill: var(--white);
     margin-inline-end: 1rem;
+
+    @media screen and (max-width: $bp-tablet-xs) {
+      width: 4rem;
+      height: 4rem;
+      padding: 0;
+      background: var(--white);
+      fill: var(--fucsia);
+      margin-inline-end: 0.8rem;
+    }
+
+    @media screen and (max-width: $bp-phone-x) {
+      display: none;
+    }
   }
 }
 
@@ -210,6 +334,10 @@
     display: block;
     line-height: 1;
     margin-block-end: 0.8rem;
+
+    @media screen and (max-width: $bp-phone-xl) {
+      font-size: 1.4rem;
+    }
   }
 
   &__desc {
@@ -294,6 +422,14 @@
   width: 64%;
   margin-block-end: 0;
   list-style: none;
+
+  @media screen and (max-width: $bp-tablet-xs) {
+    width: 80%;
+  }
+
+  @media screen and (max-width: $bp-phone-xl) {
+    font-size: 1.4rem;
+  }
 
   &__item {
     margin-inline-start: 2.4rem;
