--- a/nexter/src/sass/base/_base.scss
+++ b/nexter/src/sass/base/_base.scss
@@ -54,3 +54,16 @@ a {
 h1 {
   font-family: $font-display;
 }
+
+.heading-4 {
+  font-family: $font-display;
+  font-weight: 500;
+
+  &--light {
+    color: $color-grey-light-1;
+  }
+
+  &--dark {
+    color: $color-grey-dark-1;
+  }
+}
