--- a/nexter/src/sass/components/_components.scss
+++ b/nexter/src/sass/components/_components.scss
@@ -4,8 +4,34 @@
 }
 
 .features {
-  background-color: $color-grey-light-2;
+  margin: 16rem 0;
   grid-column: center-start / center-end;
+
+  // TODO: Refactor to subgrid;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  grid-gap: 6.4rem;
+  align-items: start;
+}
+
+.feature {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-row-gap: 1rem;
+  grid-column-gap: 1.6rem;
+
+  &__icon {
+    width: 3.6rem;
+    height: 3.6rem;
+    color: $color-primary;
+    grid-row: 1 / 3;
+    transform: translateY(-0.7rem);
+  }
+
+  &__desc {
+    font-size: 1.5rem;
+    grid-column: 2 / 3;
+  }
 }
 
 .story {
