--- a/nexter/src/sass/layout/_layout.scss
+++ b/nexter/src/sass/layout/_layout.scss
@@ -1,11 +1,12 @@
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-rows: 80vh min-content minmax(min-content, 40vw) repeat(
+      3,
+      min-content
+    );
   grid-template-columns:
-    [sidebar-start] 6.4rem [sidebar-end full-start] minmax(
-      6.4rem,
-      1fr
-    ) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+    [sidebar-start] 6.4rem [sidebar-end full-start] minmax(6.4rem, 1fr)
+    [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end] minmax(6.4rem, 1fr) [full-end];
 }
 
